testsuite/poke.pkl/struct-pretty-print-diag-1.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    fun _print = int: { return 0; } /* { dg-error "should be of type" } */
  };
